--- a/classwork/style.css
+++ b/classwork/style.css
@@ -3,6 +3,7 @@
     background-color: #c1c7c1;
     margin-bottom: 2%;
     margin-top: 0%;
+
 }
 
 li {
@@ -10,6 +11,7 @@ li {
     margin-left: 1%;
     display: inline;
 }
+
 .hh {
     font-size: 35px;
     border: 1px solid #c1c7c1;
@@ -35,8 +37,8 @@ li {
 .er1 {
     margin-left: 300px;
     width: 400px;
-    font-size: 20px;
-    text-align: justify;
+    font-size: 18px;
+    text-align: left;
 }
 
 .er2 {
@@ -45,14 +47,14 @@ li {
     margin-left: 20px;
     margin-right: 10px;
     display: inline;
-    
+
 
 }
 
 .er3 {
-    
-display: inline-flex;
-margin-left: 275px;
+
+    display: inline-flex;
+    margin-left: 275px;
 }
 
 .er3 h3 {
@@ -62,11 +64,11 @@ margin-left: 275px;
 .er4 {
     margin-left: 30px;
     width: 300px;
-    font-size: 20px;
-    text-align: justify;
+    font-size: 18px;
+    text-align: left;
 }
 
-.err{
+.err {
     display: flex;
 
 }
@@ -75,23 +77,115 @@ margin-left: 275px;
     margin-left: 30px;
     width: 300px;
 }
-.er8{
+
+.er8 {
     margin-left: 30px;
     width: 300px;
-}
-.er9{
-    margin-left: 30px;
-    width: 300px;
-    font-size: 20px;
-    text-align: justify;
 }
 
-.er11{
+.er9 {
+    margin-left: 30px;
+    width: 300px;
+    font-size: 18px;
+    text-align: left;
+}
+
+.er11 {
     width: 200px;
     font-size: 17px;
-    text-align:left;
+    text-align: left;
 }
-table{
+
+table {
     margin-left: 10px;
     border-style: none;
+}
+
+
+.qrr1 {
+    margin-left: 290px;
+    margin-bottom: 0px;
+    font-size: 35px;
+    border-bottom: 2px solid grey;
+    margin-right: 250px;
+}
+
+.qrr2 {
+    margin-top: 0%;
+    display: flex;
+}
+
+.qr1 {
+    margin-left: 300px;
+    width: 550px;
+}
+
+.qr2 {
+    margin-left: 20px;
+    width: 365px;
+    font-size: 18px;
+    text-align: left;
+    margin-top: 0%;
+}
+
+.qr3 {
+    display: inline-flex;
+}
+
+.qr3 p {
+    font-size: 18px;
+}
+
+
+.qr4 {
+    border-radius: 50%;
+    width: 60px;
+    margin-left: 30px;
+    margin-right: 10px;
+    display: inline;
+}
+
+.qr5 {
+    margin-left: 300px;
+    margin-bottom: 0px;
+}
+
+.qr6 {
+    margin-left: 300px;
+    width: 200px;
+    margin-top: 0%;
+    text-align: left;
+}
+
+.qr7 {
+    width: 280px;
+}
+.qr8{
+    width: fit-content;
+}
+
+.qrr8 {
+    border-top: 2px solid grey;
+    width: 250px;
+    margin-left: 300px;
+}
+
+.qr9 {
+    margin-left: 100px;
+    width: 600px;
+    margin-top: 0%;
+}
+
+.qrr5 {
+    display: flex;
+}
+
+.wrr {
+    display: flex;
+}
+
+.wr1,.wr2,.wr3,.wr4,.wr5{
+    border-bottom: 2px solid grey;
+    width: 400px;
+    margin-left: 2px;
 }
