--- a/classwork/style.css
+++ b/classwork/style.css
@@ -377,9 +377,9 @@ table {
 
 }
 .aa5{
-    padding: 30px;
-    margin-left: 0px;
-    margin-top: 20px;
+    margin-left: -70px;
+    margin-top: 30px;
+    line-height: 28px;
 }
 
 .aa6 img {
