--- a/the odin project/style.css
+++ b/the odin project/style.css
@@ -9,11 +9,42 @@
     margin-left: 100px;
 }
 .hhh1{
-    margin-top: 100px;
+    margin-top: 160px;
+}
+.hhh1 h1{
+    font-size: 90px;
 }
 .hh7 {
-    margin-left: 800px;
-    font-size: 15px;
+    margin-left: 850px;
+    font-size: 22px;
+}
+.ss2 p{
+    line-height: 20px;
+}
+.vv{
+    line-height: 10px;
+}
+.iii{
+    margin-left: 300px;
+    margin-right: 300px;
+}
+.ii2{
+    margin-left: 30px;
+}
+.ii3{
+    margin-top: 10px;
+}
+.ii4{
+    margin-left: 820px;
+    margin-bottom: 200px;
+}
+.container{
+    margin-left: 300px;
+    margin-right: 600px;
+}
+.col{
+margin-right: 100px;
+padding: 60px;
 }
 
 
@@ -88,7 +119,7 @@ a:hover {
 .hh2 a:hover {
     text-decoration: none;
     color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .hh7:hover {
@@ -107,5 +138,7 @@ a:hover {
     color: rgb(49, 48, 48);
     text-decoration: underline;
 }
-
+ .col:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ }
 
