--- a/the odin project/style.css
+++ b/the odin project/style.css
@@ -12,10 +12,10 @@
     margin-top: 160px;
 }
 .hhh1 h1{
-    font-size: 90px;
+    font-size: 70px;
 }
 .hh7 {
-    margin-left: 850px;
+    margin-left: 800px;
     font-size: 22px;
 }
 .ss2 p{
@@ -39,7 +39,7 @@
     margin-bottom: 200px;
 }
 .container{
-    margin-left: 300px;
+    margin-left: 350px;
     margin-right: 600px;
 }
 .col{
@@ -47,6 +47,9 @@ margin-right: 100px;
 padding: 60px;
 }
 
+.gg{
+ margin-left: 700px;
+}
 
 /*form*/
 
@@ -97,7 +100,12 @@ padding: 60px;
     text-decoration: none;
     font-size: 20px;
 }
-
+.uu1{
+    margin-left: 300px;
+}
+.uu2{
+    margin-left: 700px;
+}
 
 /*hover*/
 
@@ -138,7 +146,12 @@ a:hover {
     color: rgb(49, 48, 48);
     text-decoration: underline;
 }
- .col:hover {
+ .yy col:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  }
-
+.zz a:hover{
+    text-decoration: none;
+}
+.dd a:hover{
+    color: black;
+}
