--- a/book my show/style.css
+++ b/book my show/style.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     margin-left: 100px;
 }
 
@@ -39,13 +39,14 @@
     font-size: 18px;
     border: 1px solid #ccc;
     border-radius: 5px;
-  
+
 }
 
 .drop {
-    margin-left: 550px;
+    margin-left: 500px;
     margin-top: 26px;
 }
+
 .btn {
     padding: 10px 15px;
     font-size: 20px;
@@ -74,12 +75,14 @@
     margin-top: 34px;
     margin-left: 20px;
 }
-.list{
+
+.list {
     padding: 0px;
     width: 100%;
     background: rgb(31, 37, 51);
     border-bottom: 1px solid rgb(229, 229, 229);
 }
+
 .list1 {
     display: flex;
     font-size: 18px;
@@ -90,9 +93,11 @@
     padding: 0px;
 
 }
-.bb{
-    margin-left: 70px;
+
+.bb {
+    margin-left: 60px;
 }
+
 .bb a {
     text-decoration: none;
     color: black;
@@ -101,11 +106,11 @@
 .bb li {
     display: inline;
     margin-right: 30px;
-   
+
 }
 
 .bb1 {
-    margin-left: 760px;
+    margin-left: 690px;
 }
 
 .bb1 a {
@@ -117,37 +122,95 @@
     display: inline;
     margin-right: 20px;
 }
-.slide{
+
+.slide {
     border-radius: 8px;
     border: 1px solid rgb(245, 245, 245);
-    background-color:rgb(245, 245, 245) ;
+    background-color: rgb(245, 245, 245);
 }
-.main1{
-    margin-left: 100px;  
+
+.main1 {
+    margin-left: 100px;
 }
-.mov{
+.main1 p{
+    color: rgb(51, 50, 50);
+}
+.mov {
     display: flex;
 }
-.movie{
+
+.movie {
     border-radius: 10px;
-    margin-right: 38px;
+    margin-right: 25px;
 
 }
-.mov a{
+
+.mov a {
     text-decoration: none;
     color: black;
     text-align: left;
 }
-.main3{
+
+.main3 {
     margin-left: 100px;
     margin-top: 60px;
     margin-bottom: 60px;
 }
-.main4{
+
+.main4 {
+    margin-left: 100px;
+    margin-bottom: 20px;
+}
+
+.hh {
+    width: 310px;
+    margin-right: 30px;
+    border-radius: 8px;
+}
+
+.main5 {
+    background-color: rgb(43, 49, 72);
+}
+
+.jjj {
+    margin-top: 30px;
+    color: white;
     margin-left: 100px;
 }
-.hh{
+
+.jj {
+    margin-left: 100px;
+}
+
+.prem {
+    display: flex;
+}
+.prem a{
+    text-decoration: none;
+    color: white;
+    text-align: left;
+}
+.main6{
+    margin-left: 100px;
+    margin-top: 30px;
+
+}
+.main6 p{
+    line-height: 10px;
+    color: rgb(51, 50, 50);
+}
+.mus{
+    display: flex;
+}
+.mus a{
+    text-decoration: none;
+    color: black;
+    text-align: left;
+}
+.mus h4{
     width: 310px;
-    margin-right: 40px;
-    border-radius: 8px;
+}
+.main7{
+    margin-left: 100px;
+    margin-top: 30px;
 }
