--- a/chempakam clone/style.css
+++ b/chempakam clone/style.css
@@ -1,3 +1,16 @@
 .main{
-    background-color: rgb(247, 209, 162);
+    background-color: rgb(248, 228, 218);
+}
+.tt{
+    margin-left: 60px;
+    margin-top: 6px;
+    line-height: 26px;
+    font-size: 20px;
+}
+.main1{
+    background-color:  rgb(51, 50, 50);
+}
+.logo{
+    margin-left: 60px;
+    padding: 10px;
 }
