--- a/chempakam clone/style.css
+++ b/chempakam clone/style.css
@@ -1,19 +1,93 @@
-.main{
+.main {
     background-color: rgb(248, 228, 218);
 }
-.tt{
+
+.tt {
     margin-left: 60px;
     margin-top: 6px;
     line-height: 26px;
     font-size: 20px;
 }
-.main1{
-    background-color:  rgb(51, 50, 50);
+
+.main1 {
+    background-color: rgb(51, 50, 50);
     height: 100px;
 }
-.logo{
+
+.logo {
     margin-left: 60px;
 }
-.main1{
+
+.main1 {
     display: flex;
+}
+
+.btn {
+    margin-top: 20px;
+    color: white;
+    font-size: 20px;
+    margin-left: 200px;
+}
+
+.dropdown-menu {
+    background-color: rgb(51, 50, 50);
+}
+
+.dropdown-item {
+    color: white;
+    font-size: 20px;
+}
+
+.list li {
+    display: inline;
+    font-size: 20px;
+    color: white;
+    margin-right: 30px;
+}
+
+.list {
+    margin-top: 26px;
+}
+.search {
+    width: 234px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.search-form {
+    display: flex;
+    align-items: center;
+}
+
+.input-group {
+    position: relative;
+}
+
+.input-group-search {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+}
+
+.search-icon {
+    font-size: 22px;
+}
+
+.search-input {
+    padding: 8px 40px;
+    font-size: 22px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color:  rgb(51, 50, 50);
+
+}
+
+.main-menu>ul>li {
+    display: inline-block;
+}
+
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
