--- a/chempakam clone/style.css
+++ b/chempakam clone/style.css
@@ -48,11 +48,13 @@
 .list {
     margin-top: 26px;
 }
+
 .search {
     width: 234px;
     margin-top: 20px;
     margin-left: 20px;
 }
+
 .search-form {
     display: flex;
     align-items: center;
@@ -78,7 +80,7 @@
     font-size: 22px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color:  rgb(51, 50, 50);
+    background-color: rgb(51, 50, 50);
 
 }
 
@@ -90,4 +92,50 @@ li {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+.main2 {
+    position: relative;
+    width: 100%;
+    max-width: 900px;
+}
+.main2 img{
+    height: 900px;
+    width: 1884px;
+}
+.text-front {
+    position: absolute;
+    color: white;
+    transform: translate(-50%, -50%);
+    top: 400px;
+    left: 390px;
+    font-size: 70px;
+}
+
+.mh {
+    font-size: 140px;
+    font-family: "Birthstone Bounce", cursive;
+    font-weight: 500;
+    font-style: normal;
+}
+.sh{
+    font-size: 100px;
+}
+
+.bn1{
+    border: 1px solid white;
+    background-color: white;
+    color: gray;
+    font-size: 30px;
+    width: 180px;
+    padding: 10px;
+}
+.bn2{
+    margin-top: 20px;
+    border: 1px solid white;
+    background-color: white;
+    color: gray;
+    font-size: 30px;
+    width: 260px;
+    padding: 10px;
 }
